# Sistema_de_Semaforo

./: README.md
source/: Boton.cpp  Boton.h  CMakeLists.txt  SemaforoAuto.cpp  SemaforoAuto.h  SemaforoPeaton.cpp  SemaforoPeaton.h  SensorLDR.cpp  SensorLDR.h  SistemaSemaforo.cpp  SistemaSemaforo.h  main.cpp
